// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totaling 
    $3.00
     
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totaling 
    $12.00
     
  </h3>
</div>
`;
